# ndjson-validator

./: .gitignore  Cargo.toml  README.md
cleaned_output/: invalid1.ndjson  invalid2.ndjson
examples/: basic_usage.rs  benchmark.rs
py-ndjson-validator/: Cargo.toml  build.sh  py_ndjson_validator.py  py_ndjson_validator.pyi  pyproject.toml  test_comparison.py
py-ndjson-validator/examples/: empty.ndjson  invalid2.ndjson
py-ndjson-validator/notebooks/: example.ipynb
py-ndjson-validator/py_ndjson_validator-stubs/: setup.py
py-ndjson-validator/python/py_ndjson_validator/: __init__.py  api.py  py_ndjson_validator.pyi
py-ndjson-validator/src/: lib.rs
src/: cleaner.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  processor.rs  tests.rs  validator.rs
tests/: integration.rs  invalid1.ndjson
