[package]
name = "ndjson-validator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance ND-JSON (Newline Delimited JSON) file validator and cleaner written in Rust"
license = "MIT"
keywords = ["json", "ndjson", "validation", "cli", "parsing"]
categories = ["command-line-utilities", "parsing"]
repository = "https://github.com/username/ndjson-validator"
readme = "README.md"

[lib]
name = "ndjson_validator"
path = "src/lib.rs"

[[bin]]
name = "ndjson-validator"
path = "src/main.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = "0.5"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
anyhow = "1.0"
indicatif = "0.17"
thiserror = "1.0"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"
