[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "py-ndjson-validator"
version = "0.1.3"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
